# buggy

./: .firebaserc  .gitignore  ANSWERS_TO_YOUR_QUESTIONS.md  COMPREHENSIVE_IMPROVEMENTS.md  HowToFillForm.md  IMPROVEMENTS_SUMMARY.md  MIGRATION_GUIDE.md  NEW_FEATURES.md  README.md  REORGANIZATION_COMPLETE.md  agent.md  firebase.json  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
.firebase/: hosting.YnVpbGQ.cache  hosting.ZGlzdA.cache  hosting.cHVibGlj.cache
.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
dev-dist/: sw.js
docs/: linkdein.md  shreyam1008.md
docs-agents/: task.md.resolved
frontend/: bun.lockb  bundle-analysis.html  index.html  package.json  tsconfig.json  vite.config.ts
frontend/dev-dist/: sw.js
frontend/plugins/: generate-sitemap.ts
frontend/public/: _headers  _redirects  robots.txt  sitemap.xml
frontend/scripts/: dump-article-meta.ts
frontend/src/: App.tsx  index.css  main.tsx
public/: robots.txt  sitemap.xml
public/date/: index.html
public/wasm/: main.wasm
src/: App.backup.tsx  App.js  App.new.tsx  App.tsx  AppNew.tsx  Appold.tsx  PROJECT_STRUCTURE.md  Routing.jsx  data.js  index.css  styles.css
src/Components/: BlogCard.component.jsx  Contact.jsx  Footer.jsx  Header.jsx  Home.jsx  Layout.jsx  Layout.style.js  Portfolio.jsx  Resume.jsx  Resume.style.jss  ReviewCard.component.jsx  Tlog.jsx
src/components/: Calendar.tsx  Icons.tsx  InstallBanner.tsx  (+2 more)
src/wasm/rust/: Cargo.toml  build.sh
src/wasm/rust/src/: lib.rs
worker/: tsconfig.json  wrangler.toml
(+133 files in other folders)
